# quick-clip

./: .gitignore  AddNewTextDialog.cpp  AddNewTextDialog.h  App.cpp  App.h  CMakeLists.txt  README.md  Text.h  TextRepository.cpp  TextRepository.h  app.py  imgs.qrc  main.cpp  main.py  meson.build  quickclipboard.rc  repository.py  requirements.txt  text.py  utils.py
components/: add_new_text_dialog.py  app.py  database_connection.py
repository/: text_repository.py
repository/text/: query.py  text_repository.py
res/: __init__.py  strings.py
src/: main.vala  meson.build  utils.vala
src/component/: app_indicator.vala
src/model/: text_entry.vala
src/repository/: text_entry.vala
src/widget/: edit_or_delete.vala  list_row.vala  new_text_entry.vala
